fix for Moesjarraf's jumping height

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -6989,6 +6989,7 @@ div .toggle-item:first-child {
   transition: 123ms ease-in-out;
   display: block;
   transition: opacity 0.5s;
+  transform: translateZ(0);
 }
 
 .team-image img.one {
